# mdrpc

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: test_build.yml
src/: CMakeLists.txt  DiscordPlugin.cpp  DiscordPlugin.hpp  IMpvPlugin.hpp  IntervalRunner.hpp  ModernMPV.hpp  PerIntervalRunner.hpp  PluginMain.cpp  PropertyHelpers.hpp  Singleton.hpp  SymHide.hpp  Utils.hpp  mpv_discord.hpp  mpv_helpers.hpp  mpv_main.cpp  mpv_plugin.hpp  vergen.cmake
